[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/AGENCYB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Attractions/NetClicker/NoFrills/NoFrills.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[node name="NoFrills" type="Node"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.117647, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BootButton" type="Button" parent="BG"]
modulate = Color( 1, 0.858824, 0.517647, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 350.0
margin_top = -28.5
margin_right = -350.0
margin_bottom = 28.5
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.909804, 0.933333, 0.164706, 1 )
text = "No Frills Clicker"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playground" type="GridContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 50, 50 )
mouse_filter = 2
custom_constants/vseparation = 24
custom_constants/hseparation = 24
columns = 9
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BG/BootButton" to="." method="_on_BootButton_pressed"]
